<resources>
    <string name="app_name">FloraGraphica</string>
    <string name="title_activity_home">HomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello World!</string>
    <string name="description">Фон splashscreen</string>
    <string name="add_sort">Добавить сорт</string>
    <string name="add">Добавить</string>
    <string name="send_to_food">Отправить на ФудСити</string>
    <string name="send_to_varsh">Отправить на Варшавку</string>
    <string name="sell">Продать</string>
    <string name="realization">Реализация</string>
    <string name="photo">Фото</string>
    <string name="sort">СОРТ</string>
    <string name="quantity">КОЛ-ВО</string>
    <string name="scan">Сканировать</string>
    <string name="sort_name">Название сорта</string>
    <string name="package_number">Номер упаковки</string>
    <string name="enter_number">Введите номер</string>
    <string name="cod">Код</string>
    <string name="enter_cod">Введите код</string>
    <string name="type">Тип</string>
    <string name="color">Цвет</string>
    <string name="delete_all">Удалить всё</string>

    <string-array name="types">
        <item>Обычные</item>
        <item>Пёстрые</item>
        <item>Махровые</item>
        <item>Бахромчатые</item>
        <item>Попугайные</item>
    </string-array>

    <string-array name="colors">
        <item>Белый</item>
        <item>Кремовый</item>
        <item>Жёлтый</item>
        <item>Бордо</item>
        <item>Красный</item>
        <item>Светло-розовый</item>
        <item>Розовый</item>
        <item>Оранжевый</item>
        <item>Лилак</item>
        <item>Фиолетовый</item>
        <item>Красно-жёлтый</item>
        <item>Розово-белый</item>
        <item>Красно-белый</item>
        <item>Лилово-белый</item>
        <item>Тёмно-пурпурный</item>
    </string-array>

    <string-array name="sorts">
        <item>Darwisnow</item>
        <item>Cream Fraiche</item>
        <item>Coalition</item>
        <item>Lalibela</item>
        <item>Red Lable</item>
        <item>Super Model</item>
        <item>Barcelona Beauty</item>
        <item>Orange Ninja</item>
        <item>Barcelona</item>
        <item>Bullit</item>
        <item>Verandy</item>
        <item>Milkshake</item>
        <item>Roman Empire</item>
        <item>Synaeda Blue</item>
        <item>Double Twist</item>
        <item>Queensland</item>
        <item>Parrot Sweet</item>
    </string-array>
</resources>