<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".presentation.activity.TulaActivity">
    <item
            android:id="@+id/action_add"
            android:orderInCategory="100"
            android:title="@string/add"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_sendToFood"
            android:orderInCategory="100"
            android:title="@string/send_to_food"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_sendToVarsh"
            android:orderInCategory="100"
            android:title="@string/send_to_varsh"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_sold"
            android:orderInCategory="100"
            android:title="@string/sell"
            app:showAsAction="never"/>
</menu>