<?xml version="1.0" encoding="utf-8"?>

<!-- LinearLayout выравнивает все дочерние объекты в одном направлении — вертикально или горизонтально -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.activity.AddTulaActivity"
android:background="@color/colorPrimaryDark">

    <!-- Название сорта (sort) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/sort_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spSorts_tula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:padding="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Номер упаковки (packNum) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/package_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:padding="5dp"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <EditText
                android:id="@+id/etPackNumber_tula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/enter_number"
                android:inputType="number"
                android:autofillHints="package_number"/>
    </LinearLayout>

    <!-- Макет кнопки ADD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_add_tula"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"/>
    </LinearLayout>

    <!-- Макет кнопки Сканировать -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_scan_tula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scan"/>
    </LinearLayout>

    <!-- RecyclerView предназначен для оптимизации работы со списками -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tula_manually"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/list_row_add_tula"/>
    <!-- В "list_row_main" прописываем элемент списка -->

</LinearLayout>