<?xml version="1.0" encoding="utf-8"?>

<!-- LinearLayout выравнивает все дочерние объекты в одном направлении — вертикально или горизонтально -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".presentation.activity.AddDataActivity"
        android:background="@color/colorPrimaryDark">

    <!-- Код (ID) -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewID"
                android:textColor="@color/colorWhite"
                android:padding="5dp"
                android:layout_weight="1.6"
                android:textSize="20sp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextID"
                android:padding="10dp"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/enter_cod"
                android:inputType="number"
                android:autofillHints="cod"/>
    </LinearLayout>

    <!-- Тип -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

        <TextView
                android:text="@string/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewType"
                android:textColor="@color/colorWhite"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spTypes"
                android:spinnerMode="dialog"
                android:padding="20dp"
                android:layout_weight="1.2"
        android:outlineAmbientShadowColor="@color/colorWhite"/>
    </LinearLayout>

    <!-- Цвет -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

        <TextView
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewColor"
                android:textColor="@color/colorWhite"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spColors"
                android:spinnerMode="dialog"
                android:padding="20dp"
                android:layout_weight="1.3"
        android:outlineSpotShadowColor="@color/colorWhite"/>
    </LinearLayout>

    <!-- Сорт -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

        <TextView
                android:text="@string/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSort"
                android:textColor="@color/colorWhite"
                android:padding="5dp"
                android:layout_weight="1"
                android:textSize="20sp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spSorts"
                android:spinnerMode="dialog"
                android:padding="20dp"
                android:layout_weight="1.3"/>
    </LinearLayout>

    <!-- Макет кнопок ADD и RESET -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/bt_add"
                android:text="@string/add"
                tools:ignore="ButtonStyle"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/bt_reset"
                android:text="@string/delete_all"
                tools:ignore="ButtonStyle"/>

    </LinearLayout>

    <!-- RecyclerView предназначен для оптимизации работы со списками -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/list_row_main"/>
    <!-- В "list_row_main" прописываем элемент списка -->

</LinearLayout>